Don't use weird chroma/filter IE hack for transparent borders - replace border spacing with Margins instead (refs #2048) This also needs some fixes for the animated hover/fade effect in gallery
git-svn-id: file:///Users/gauthierm/svnrepo/pinhole/trunk@28089 94490950-a86c-4493-9ccb-530f72933e47

--- a/www/styles/pinhole-browser-page.css
+++ b/www/styles/pinhole-browser-page.css
@@ -20,15 +20,6 @@ h2#page_title {
 #sub_hd {display:block;}
 /* End hide from IE Mac */
 
-.swat-tile-view .swat-tile {
-	border: 1px solid transparent;
-	/* IE6 Hack
-	   set an unused color to be index color
-	   then remove this indexed color */
-	_border-color: tomato;
-	_filter:chroma(color=tomato);
-}
-
 .swat-tile-view .swat-tile a:hover {
 	background: #eee;
 }
